--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.aquareup.picasso:picasso:2.71828'
+    implementation 'androidx.fragment:fragment-ktx:1.5.7'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
